Implemented Ajax Spider into Dev Build, not fully functional but the main concern is accessing its Tools menu for design inspiration